--- a/templates/course-management.html
+++ b/templates/course-management.html
@@ -215,5 +215,7 @@
             });
         });
     </script>
+    <br>
+    <button type="button" onclick="window.location.href='/'">返回</button>
 </body>
 </html>
