--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,8 @@
             });
         }
         </script>
-             
+        <br>
+        <button type="button" onclick="window.location.href='/'">返回</button>
 </body>
 </html>
            
