--- a/templates/course-management.html
+++ b/templates/course-management.html
@@ -72,6 +72,8 @@
                 <th>教師</th>
                 <th>時間</th>
                 <th>地點</th>
+                <th>介紹</th>
+                <th>學數分配</th>
                 <th>學分</th>
                 <th>名額</th>
                 <th>操作</th>
@@ -85,6 +87,8 @@
                 <td>{{ course.teacher }}</td>
                 <td>{{ course.time }}</td>
                 <td>{{ course.location }}</td>
+                <td>{{ course.extra_info }}</td>
+                <td>{{ course.grades }}</td>
                 <td>{{ course.credits }}</td>
                 <td>{{ course.max_capacity }}</td>
                 <td>
@@ -117,6 +121,14 @@
                 <input type="text" id="location" required>
             </div>
             <div class="form-group">
+                <label for="extra_info">地點</label>
+                <input type="text" id="extra_info" required>
+            </div>
+            <div class="form-group">
+                <label for="grades">地點</label>
+                <input type="text" id="grades" required>
+            </div>
+            <div class="form-group">
                 <label for="credits">學分</label>
                 <input type="number" id="credits" required min="0" step="0.5">
             </div>
@@ -142,6 +154,8 @@
                     document.getElementById('teacher').value = course.teacher;
                     document.getElementById('time').value = course.time;
                     document.getElementById('location').value = course.location;
+                    document.getElementById('extra_info').value = course.location;
+                    document.getElementById('grades').value = course.location;
                     document.getElementById('credits').value = course.credits;
                     document.getElementById('maxCapacity').value = course.max_capacity;
                     document.getElementById('editForm').style.display = 'block';
@@ -191,6 +205,8 @@
                     teacher: document.getElementById('teacher').value,
                     time: document.getElementById('time').value,
                     location: document.getElementById('location').value,
+                    extra_info: document.getElementById('extra_info').value,
+                    grades: document.getElementById('grades').value,
                     credits: document.getElementById('credits').value,
                     max_capacity: document.getElementById('maxCapacity').value
                 }
