更 增加介紹和分數分配欄位

--- a/templates/course-management.html
+++ b/templates/course-management.html
@@ -73,7 +73,7 @@
                 <th>時間</th>
                 <th>地點</th>
                 <th>介紹</th>
-                <th>學數分配</th>
+                <th>分數分配</th>
                 <th>學分</th>
                 <th>名額</th>
                 <th>操作</th>
@@ -154,8 +154,8 @@
                     document.getElementById('teacher').value = course.teacher;
                     document.getElementById('time').value = course.time;
                     document.getElementById('location').value = course.location;
-                    document.getElementById('extra_info').value = course.location;
-                    document.getElementById('grades').value = course.location;
+                    document.getElementById('extra_info').value = course.extra_info;
+                    document.getElementById('grades').value = course.grades;
                     document.getElementById('credits').value = course.credits;
                     document.getElementById('maxCapacity').value = course.max_capacity;
                     document.getElementById('editForm').style.display = 'block';
